# serializer version: 1
# name: test_list_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-97db95eb
  
    ''',
  })
# ---
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-97db95eb
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      example-97db95eb
      requires-package-only-prereleases-a8b21d15
      requires-package-only-prereleases-in-range-b4df71d2
      requires-package-only-prereleases-in-range-global-opt-in-51f94da2
      requires-package-prerelease-and-final-any-eebe53a6
      requires-package-prerelease-specified-only-final-available-8c3e26d4
      requires-package-prerelease-specified-only-prerelease-available-b91b9892
      requires-package-prerelease-specified-mixed-available-48b383b8
      requires-package-multiple-prereleases-kinds-91b38a0e
      requires-package-multiple-prereleases-numbers-4cf7acef
      requires-transitive-package-only-prereleases-6e20b294
      requires-transitive-package-only-prereleases-in-range-848f2c77
      requires-transitive-package-only-prereleases-in-range-opt-in-1d2fc5a9
      requires-transitive-prerelease-and-stable-dependency-31b546ef
      requires-transitive-prerelease-and-stable-dependency-opt-in-dd00a87f
      requires-transitive-prerelease-and-stable-dependency-many-versions-3258056f
      requires-transitive-prerelease-and-stable-dependency-many-versions-holes-293fcbc7
      requires-package-does-not-exist-57cd4136
      requires-exact-version-does-not-exist-eaa03067
      requires-greater-version-does-not-exist-6e8e01df
      requires-less-version-does-not-exist-e45cec3c
      transitive-requires-package-does-not-exist-aca2796a
      requires-direct-incompatible-versions-063ec9d3
      requires-transitive-incompatible-with-root-version-638350f3
      requires-transitive-incompatible-with-transitive-9b595175
      requires-python-version-does-not-exist-0825b69c
      requires-python-version-less-than-current-f9296b84
      requires-python-version-greater-than-current-a11d5394
      requires-python-version-greater-than-current-many-02dc550c
      requires-python-version-greater-than-current-backtrack-ef060cef
      requires-python-version-greater-than-current-excluded-1bde0c18
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-97db95eb
      scenarios/prereleases.json
          requires-package-only-prereleases-a8b21d15
          requires-package-only-prereleases-in-range-b4df71d2
          requires-package-only-prereleases-in-range-global-opt-in-51f94da2
          requires-package-prerelease-and-final-any-eebe53a6
          requires-package-prerelease-specified-only-final-available-8c3e26d4
          requires-package-prerelease-specified-only-prerelease-available-b91b9892
          requires-package-prerelease-specified-mixed-available-48b383b8
          requires-package-multiple-prereleases-kinds-91b38a0e
          requires-package-multiple-prereleases-numbers-4cf7acef
          requires-transitive-package-only-prereleases-6e20b294
          requires-transitive-package-only-prereleases-in-range-848f2c77
          requires-transitive-package-only-prereleases-in-range-opt-in-1d2fc5a9
          requires-transitive-prerelease-and-stable-dependency-31b546ef
          requires-transitive-prerelease-and-stable-dependency-opt-in-dd00a87f
          requires-transitive-prerelease-and-stable-dependency-many-versions-3258056f
          requires-transitive-prerelease-and-stable-dependency-many-versions-holes-293fcbc7
      scenarios/requires-does-not-exist.json
          requires-package-does-not-exist-57cd4136
          requires-exact-version-does-not-exist-eaa03067
          requires-greater-version-does-not-exist-6e8e01df
          requires-less-version-does-not-exist-e45cec3c
          transitive-requires-package-does-not-exist-aca2796a
      scenarios/requires-incompatible-versions.json
          requires-direct-incompatible-versions-063ec9d3
          requires-transitive-incompatible-with-root-version-638350f3
          requires-transitive-incompatible-with-transitive-9b595175
      scenarios/requires-python.json
          requires-python-version-does-not-exist-0825b69c
          requires-python-version-less-than-current-f9296b84
          requires-python-version-greater-than-current-a11d5394
          requires-python-version-greater-than-current-many-02dc550c
          requires-python-version-greater-than-current-backtrack-ef060cef
          requires-python-version-greater-than-current-excluded-1bde0c18
  
    ''',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example
      scenarios/prereleases.json
          requires-package-only-prereleases
          requires-package-only-prereleases-in-range
          requires-package-only-prereleases-in-range-global-opt-in
          requires-package-prerelease-and-final-any
          requires-package-prerelease-specified-only-final-available
          requires-package-prerelease-specified-only-prerelease-available
          requires-package-prerelease-specified-mixed-available
          requires-package-multiple-prereleases-kinds
          requires-package-multiple-prereleases-numbers
          requires-transitive-package-only-prereleases
          requires-transitive-package-only-prereleases-in-range
          requires-transitive-package-only-prereleases-in-range-opt-in
          requires-transitive-prerelease-and-stable-dependency
          requires-transitive-prerelease-and-stable-dependency-opt-in
          requires-transitive-prerelease-and-stable-dependency-many-versions
          requires-transitive-prerelease-and-stable-dependency-many-versions-holes
      scenarios/requires-does-not-exist.json
          requires-package-does-not-exist
          requires-exact-version-does-not-exist
          requires-greater-version-does-not-exist
          requires-less-version-does-not-exist
          transitive-requires-package-does-not-exist
      scenarios/requires-incompatible-versions.json
          requires-direct-incompatible-versions
          requires-transitive-incompatible-with-root-version
          requires-transitive-incompatible-with-transitive
      scenarios/requires-python.json
          requires-python-version-does-not-exist
          requires-python-version-less-than-current
          requires-python-version-greater-than-current
          requires-python-version-greater-than-current-many
          requires-python-version-greater-than-current-backtrack
          requires-python-version-greater-than-current-excluded
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
